--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -2,21 +2,97 @@
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
+    <data>
+
+        <variable
+            name="handler"
+            type="com.example.gabrielrosa.starwarscharactersaver.App.homescreen.HomeFragment"
+            />
+
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/home_screen_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="2dp">
+
+            <TextView
+                android:id="@+id/home_screen_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textColor="@color/white"
+                android:text="@string/home_screen.title"
+                android:textSize="18sp"
+                android:gravity="center"
+                />
+
+        </android.support.v7.widget.Toolbar>
+
         <TextView
             android:text="@string/welcome_text"
-            android:layout_margin="16dp"
+            android:layout_marginTop="100dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:layout_gravity="center"/>
+            android:layout_centerHorizontal="true"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_centerInParent="true">
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/characters_card_view"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:onClick="@{handler::goToCharactersScreen}"
+                >
+
+                <TextView
+                    android:padding="16dp"
+                    android:text="@string/home_screen.character_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    />
+
+            </android.support.v7.widget.CardView>
 
 
+            <android.support.v7.widget.CardView
+                android:id="@+id/species_card_view"
+                android:layout_width="160dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:onClick="@{handler::goToSpeciesScreen}"
+                >
 
-    </LinearLayout>
+                <TextView
+                    android:padding="16dp"
+                    android:text="@string/home_screen.species_option"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackground"
+                    />
 
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </RelativeLayout>
 </layout>
