--- a/app/src/main/res/layout/species_act.xml
+++ b/app/src/main/res/layout/species_act.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <FrameLayout
-        android:id="@+id/home_content_frame"
+        android:id="@+id/species_content_frame"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
