--- a/app/src/main/res/layout/characters_frag.xml
+++ b/app/src/main/res/layout/characters_frag.xml
@@ -101,5 +101,11 @@
             android:padding="16dp"
             />
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/characters_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
     </LinearLayout>
 </layout>
