--- a/app/src/main/res/layout/characters_frag.xml
+++ b/app/src/main/res/layout/characters_frag.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -38,7 +39,7 @@
         </android.support.v7.widget.Toolbar>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -47,10 +48,11 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/characters_from_api_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
+                android:layout_weight="1"
                 android:onClick="@{handler::setRemoteData}"
                 >
 
@@ -69,10 +71,11 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/characters_from_database_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
+                android:layout_weight="1"
                 android:onClick="@{handler::setLocalData}"
                 >
 
@@ -101,11 +104,25 @@
             android:padding="16dp"
             />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/characters_recycler"
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="match_parent">
 
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/characters_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/add_character_float_action_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="20dp"
+                android:src="@drawable/ic_add_white_24dp"
+                app:backgroundTint="@color/colorPrimary"
+                />
+        </android.support.design.widget.CoordinatorLayout>
     </LinearLayout>
 </layout>
