--- a/app/src/main/res/layout/home_frag.xml
+++ b/app/src/main/res/layout/home_frag.xml
@@ -46,17 +46,18 @@
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_centerInParent="true">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/characters_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
+                android:layout_weight="1"
                 android:onClick="@{handler::goToCharactersScreen}"
                 >
 
@@ -75,9 +76,10 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/species_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_weight="1"
                 android:layout_margin="16dp"
                 android:onClick="@{handler::goToSpeciesScreen}"
                 >
