--- a/app/src/main/res/layout/species_frag.xml
+++ b/app/src/main/res/layout/species_frag.xml
@@ -36,7 +36,7 @@
         </android.support.v7.widget.Toolbar>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
@@ -45,10 +45,11 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/species_from_api_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
+                android:layout_weight="1"
                 android:onClick="@{handler::setRemoteData}"
                 >
 
@@ -67,10 +68,11 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/species_from_database_card_view"
-                android:layout_width="160dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="16dp"
+                android:layout_weight="1"
                 android:onClick="@{handler::setLocalData}"
                 >
 
